# JupyterPlugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_Python.md  conanfile.py  dependencies.cmake  pyproject.toml  pyproject.toml.old  requirements.txt  vcpkg.json
.github/workflows/: build.yml
assets/: README.TXT
cmake/: InstallArtifactoryPackage.cmake  PythonBuildVersion.h.in  README.md  dependencies.cmake  libsodiumopt.patch  read_plugin_version.cmake  uuidopt.patch  xeus-python.patch
docs/: Architecture.md  FAQ.md  Kernel_manager.md  Python_scripts_for_ManiVault.md
examples/: count_cells_per_cluster.ipynb  demo_data_loading.ipynb  requirements.txt  save_load_clusters.ipynb
examples/projects/basal_ganglia/: load_basal_ganglia_data.ipynb  merge_bg_features.py  requirements.txt
examples/projects/cell_count/: README.txt  requirements.txt  save_load_clusters.ipynb
examples/projects/cell_segmentation_qupath/: OS2-ROI.geojson  OS2-ROI.ome.tif  QuPathCellMasks.ipynb  requirements.txt
examples/scripts/: load_cell_image_and_mask.json  load_cell_image_and_mask.py  load_cell_image_and_mask_requirements.txt  select_image_mask.json  select_image_mask.py  select_image_mask_requirements.txt  write_image_as_png.json  write_image_as_png.py  write_image_as_png_requirements.txt
python/: mvstudio_demo.ipynb  pyproject.toml
python/mvstudio/: __init__.py
python/mvstudio/data/: __init__.py  cluster.py  data_hierarchy.py  hierarchy.py  image.py  item.py
python/mvstudio/data_hierarchy/: __init__.py  data_hierarchy.py
python/mvstudio/jupyter_kernel/: __init__.py
python/mvstudio_data/: pyproject.toml
python/mvstudio_data/mvstudio/data/: __init__.py  cluster.py  clusterbase.py  factory.py  hierarchy.py  image.py  item.py
python/mvstudio_kernel/: pyproject.toml
src/: JupyterPlugin.cpp  JupyterPlugin.h  JupyterPlugin.json  JupyterXeusKernel.cpp  JupyterXeusKernel.h  MVData.cpp  MVData.h  SettingsAction.cpp  SettingsAction.h  XeusInterpreter.cpp  XeusInterpreter.h  XeusKernel.cpp  XeusKernel.h  XeusPoller.cpp  XeusPoller.h  XeusServer.cpp  XeusServer.h
src/JupyterLauncher/: CMakeLists.txt  FileHandlingUtils.cpp  FileHandlingUtils.h  GlobalSettingsAction.cpp  GlobalSettingsAction.h  JsonUtils.cpp  JsonUtils.h  JupyterLauncher.cpp  JupyterLauncher.h  JupyterLauncher.json  PluginInfo.json  PythonUtils.cpp  PythonUtils.h  ScriptDialogAction.cpp  ScriptDialogAction.h  UserDialogActions.cpp  UserDialogActions.h  Utils.cpp  Utils.h
src/JupyterLauncher/res/: jupyter_launcher_resources.qrc
src/JupyterLauncher/res/kernel-files/: kernel.json
src/JupyterLauncher/res/text/: check_env.py  find_libpython.py
src/JupyterLauncher/src/: GlobalSettingsAction.cpp  GlobalSettingsAction.h  JupyterLauncher.cpp  JupyterLauncher.h  JupyterLauncher.json  SettingsAction.cpp  SettingsAction.h  mvstudio_version.h.in
src/JupyterPlugin/: BindingUtils.cpp  BindingUtils.h  CMakeLists.txt  JupyterPlugin.cpp  JupyterPlugin.h  JupyterPlugin.json  MVData.cpp  MVData.h  PluginInfo.json  XeusInterpreter.cpp  XeusInterpreter.h  XeusKernel.cpp  XeusKernel.h  XeusPoller.h  XeusServer.cpp  XeusServer.h
src/JupyterPlugin/res/: jupyter_server_config.py
src/MVJupyterPluginManager/: README.md  __init__.py  __main__.py  install_top.txt  manager.py  provisioning.py
src/MVJupyterPluginManager/config/: jupyter_notebook_config.py
src/mvstudio_data/: pyproject.toml
src/mvstudio_data/mvstudio/data/: __init__.py  cluster.py  clusterbase.py  factory.py  hierarchy.py  image.py  item.py
src/mvstudio_kernel/: pyproject.toml
src/mvstudio_kernel/mvstudio/kernel/: __init__.py  manager.py
temp/share/jupyter/kernels/python3/: kernel.json
tests/: CMakeLists.txt  JupyterPluginTest.cpp
tutorials/: notebook_setup.json  notebook_setup.md  test.json  test.md
