[tool.poetry]
name = 'MVJupyterPlugin'
version = '0.2.0'
description = 'Jupyter yntegration for the ManiVaultStudio JupyterPlugin hosted kernel'
authors = [
    "Baldur van Lew <b.van_lew@lumc.nl>"
]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/ManiVaultStudio/JupyterPlugin"
keywords = ["JupyterLab", "kernel", "manager"]
classifiers = [
    "Framework :: Jupyter :: JupyterLab",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering"
]
packages = [{include = "MVJupyterPluginManager", from = 'src'}] 

[tool.poetry.dependencies]
python = '>=3.10'
jupyterlab_server = "^2.25.2"
jupyter-server = "^=2.12.5"
