[tool.poetry]
name = 'MVJupyterPluginManager'
version = '0.4.5'
description = 'Jupyter integration for the ManiVaultStudio JupyterPlugin hosted kernel'
authors = [
    "Baldur van Lew <b.van_lew@lumc.nl>"
]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/ManiVaultStudio/JupyterPlugin"
keywords = ["JupyterLab", "kernel", "manager"]
classifiers = [
    "Framework :: Jupyter :: JupyterLab",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering"
]
packages = [{include = "MVJupyterPluginManager", from = 'src'}] 

[tool.poetry.dependencies]
comm ='~=0.2.2'
python = '~=3.11'
jupyterlab_server = "~=2.25.2"
jupyter_server = "~=2.12.5"
jupyter_client = "~=8.6.0"
xeus-python-shell = "~0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.black]
line-length = 120

[project.scripts]
MVLaunchJupyter = "MVJupyterPluginManager.__main__:main"

[tool.poetry.plugins."jupyter_client.kernel_provisioners"]
mvjupyterplugin-existing-provisioner = "MVJupyterPluginManager:ExistingProvisioner"
